@@ -17,7 +17,13 @@ ext {
     jre_version = '21.0.3'
     zulu_jre_version = '21.34.19'
     jre_major = zulu_jre_version.split("[.]")[0]
-
+    siriusJvmArgs = ['-Xms1G',
+                     '-XX:MaxRAMPercentage=80',
+//                                 '-XX:+UseG1GC',
+//                                 '-XX:+UseStringDeduplication',
+                     '-XX:+UseZGC',
+                     '-XX:+ZGenerational',
+                     '-XX:+ExitOnOutOfMemoryError']
     OS = DefaultNativePlatform.currentOperatingSystem
 
     if (siriusTargetPlatform.isLinux()) {
@@ -41,7 +47,7 @@ ext {
     }
 }
 
-task downloadRuntimeImageFX(type: Download) {
+tasks.register('downloadRuntimeImageFX', Download) {
     String fname = "zulu${zulu_jre_version}-ca-fx-jre${jre_version}-${zosName}_x64${siriusTargetPlatform.isWin() ? ".zip" : ".tar.gz"}"
 
     src "https://cdn.azul.com/zulu/bin/${fname}"
@@ -50,11 +56,12 @@ task downloadRuntimeImageFX(type: Download) {
     overwrite false
 }
 
-task extractRuntimeImageFX(type: ExtractRuntime, dependsOn: downloadRuntimeImageFX) {
+tasks.register('extractRuntimeImageFX', ExtractRuntime) {
+    dependsOn downloadRuntimeImageFX
     inputArchive = downloadRuntimeImageFX.dest
 }
 
-task downloadRuntimeImageHeadless(type: Download) {
+tasks.register('downloadRuntimeImageHeadless', Download) {
     String fname = "zulu${zulu_jre_version}-ca-jre${jre_version}-${zosName}_x64${siriusTargetPlatform.isWin() ? ".zip" : ".tar.gz"}"
 
     src "https://cdn.azul.com/zulu/bin/${fname}"
@@ -63,11 +70,13 @@ task downloadRuntimeImageHeadless(type: Download) {
     overwrite false
 }
 
-task extractRuntimeImageHeadless(type: ExtractRuntime, dependsOn: downloadRuntimeImageHeadless) {
+tasks.register('extractRuntimeImageHeadless', ExtractRuntime) {
+    dependsOn downloadRuntimeImageHeadless
     inputArchive = downloadRuntimeImageHeadless.dest
 }
 
 subprojects {
+    apply plugin: 'application'
     apply plugin: 'edu.sc.seis.launch4j'
 
     jar {
@@ -89,7 +98,7 @@ subprojects {
     //###################################### Start Default values ##########################################
 
     //collect auto generated profiles and check them for null values
-    task collectProfiles() {
+    tasks.register('collectProfiles') {
         group = 'properties'
         outputs.dir("$buildDir/tmp/profiles/de.unijena.bioinf.ms.defaults")
         doLast {
@@ -109,7 +118,7 @@ subprojects {
     }
     collectProfiles.dependsOn('compileJava')
 
-    task makeProfileTemplate() {
+    tasks.register('makeProfileTemplate') {
         group = 'properties'
         outputs.file("$buildDir/tmp/profiles_concat/concat.profile")
         doLast {
@@ -128,7 +137,7 @@ subprojects {
     }
     makeProfileTemplate.dependsOn('collectProfiles')
 
-    task checkDefaultProfile() {
+    tasks.register('checkDefaultProfile') {
         group = 'properties'
         doLast {
             Properties defaultProfile = new Properties()
@@ -169,13 +178,7 @@ subprojects {
         headerType = "console"
         outfile = "sirius.exe"
 
-        //todo replace
-        jvmOptions = [
-                '-Xms1G',
-                '-XX:MaxRAMPercentage=85',
-                '-XX:+UseG1GC',
-                '-XX:+UseStringDeduplication',
-                '-XX:+ExitOnOutOfMemoryError',
+        jvmOptions = project.siriusJvmArgs + [
                 '-Djava.library.path=.\\'
         ]
 
@@ -192,7 +195,7 @@ subprojects {
         bundledJrePath = launch4jJDKPath != null ? launch4jJDKPath : ".\\runtime"
     }
 
-    task distImage(type: AppImage, group: 'distribution') {
+    tasks.register('distImage', AppImage) {
         dependsOn installDist
         if (siriusTargetPlatform.isWin())
             dependsOn createAllExecutables
@@ -238,7 +241,7 @@ subprojects {
                 into(resourceTarget)
             }
 
-            if(!includeJreFX)
+            if (!includeJreFX)
                 delete runtimeTarget
 
             if (siriusTargetPlatform.isWin()) {
@@ -288,13 +291,13 @@ subprojects {
                 templateBinding.cplexHome = "/bin/x86-64_osx"
                 templateBinding.jvmOpts = "${Arrays.stream(jvmArgs).collect(Collectors.joining(' '))}"
                 templateBinding.javaCommand = "\$APP_HOME/runtime/Contents/Home/bin/java"
-                templateBinding.jarHome = libDir == null ?  "\$APP_HOME/app" : libDir
+                templateBinding.jarHome = libDir == null ? "\$APP_HOME/app" : libDir
             } else if (siriusTargetPlatform.isWin()) {
                 f = file("$appRootTarget/sirius.bat")
                 sf = file("${rootDir}/scripts/sirius.bat.templ")
                 templateBinding.classPath = "%JAR_HOME%\\*"
                 templateBinding.jvmOpts = "${Arrays.stream(jvmArgs).map({ s -> '"' + s + '"' }).collect(Collectors.joining(" "))}"
-                templateBinding.jarHome =  libDir == null ? "%APP_HOME%\\app" : libDir
+                templateBinding.jarHome = libDir == null ? "%APP_HOME%\\app" : libDir
                 templateBinding.gurobiJar = "%GUROBI_HOME%\\lib\\gurobi.jar"
                 templateBinding.cplexJar = "%CPLEX_HOME%\\lib\\cplex.jar"
             } else {
@@ -306,21 +309,23 @@ subprojects {
             f.setExecutable(true, false)
 
             println("----> DistImage")
-            appRootTarget.list().each {println it}
+            appRootTarget.list().each { println it }
             println()
             println("----> DistImage bin")
-            launcherTarget.list().each {println it}
+            launcherTarget.list().each { println it }
             println()
             println("----> DistImage lib")
-            new File(appRootTarget, 'lib').list().each {println it}
+            new File(appRootTarget, 'lib').list().each { println it }
             println()
             println("----> DistImage runtime")
-            runtimeTarget.list().each {println it}
+            runtimeTarget.list().each { println it }
 
         }
     }
 
-    task distImageTestLocal(dependsOn: distImage, type: Test, group: 'distribution') {
+    tasks.register('distImageTestLocal', Test) {
+        group 'verification'
+        dependsOn distImage
         useJUnitPlatform()
         testClassesDirs = project(':sirius_dist').sourceSets.test.output
         filter.includeTestsMatching('*Local')
@@ -405,7 +410,8 @@ subprojects {
     }
 
 
-    task distImageTestCICD(type: Test, group: 'distribution') {
+    tasks.register('distImageTestCICD', Test) {
+        group 'verification'
         useJUnitPlatform()
         testClassesDirs = project(':sirius_dist').sourceSets.test.output
         filter.includeTestsMatching('*Local')
@@ -471,7 +477,9 @@ subprojects {
     }
 
 
-    task signDistImage(dependsOn: distImage, group: 'distribution') {
+    tasks.register('signDistImage') {
+        group 'distribution'
+        dependsOn distImage
 
         inputs.dir(distImage.outputDir)
         doLast {
@@ -534,7 +542,9 @@ subprojects {
         }
     }
 
-    task distImageZip(dependsOn: distImage, group: 'distribution') {
+    tasks.register('distImageZip') {
+        group 'distribution'
+        dependsOn distImage
         doFirst {
             def imageDir = distImage.getImageDir()
             def parentPath = imageDir.parentFile.toPath()
@@ -551,7 +561,8 @@ subprojects {
     distImageZip.mustRunAfter(signDistImage)
 
 
-    task distInstaller(type: AppInstaller, dependsOn: distImage, group: 'distribution') {
+    tasks.register('distInstaller', AppInstaller) {
+        dependsOn distImage
         distImg = distImage
         types = [installerNameType]
         licenseFile = getRootProject().rootDir.toPath().resolve('jpackage').resolve('LICENSE-Full.txt').toFile()
@@ -566,7 +577,10 @@ subprojects {
     }
     distInstaller.mustRunAfter(signDistImage)
 
-    task signDistInstaller(dependsOn: distInstaller, group: 'distribution') {
+
+    tasks.register('signDistInstaller') {
+        group 'distribution'
+        dependsOn distInstaller
         inputs.dir(distImage.outputDir)
         doLast {
             def source
@@ -628,7 +642,9 @@ subprojects {
         }
     }
 
-    task macNotarize(dependsOn: signDistInstaller, group: 'distribution') {
+    tasks.register('macNotarize') {
+        group 'distribution'
+        dependsOn signDistInstaller
         inputs.dir(distImage.outputDir)
         doLast {
             if (siriusTargetPlatform.isMac()) {
@@ -698,15 +714,16 @@ subprojects {
         }
     }
 
-    task createChecksums(type: Checksum) {
-        mustRunAfter('distImageZip', 'distInstaller', 'macNotarize', 'signDistImage', 'signDistInstaller', 'distZip', 'distTar')
+    tasks.register('createChecksums', Checksum) {
+        group 'distribution'
+        mustRunAfter('distImageZip', 'distInstaller', 'macNotarize', 'signDistImage', 'signDistInstaller', 'distZip', 'distTar', 'siriusDistZip', 'siriusDistTar')
         inputFiles.setFrom(fileTree(dir: "$buildDir/distributions", includes: ['*.zip', '*.pkg', '*.deb', '*.msi']))
         outputDirectory.set(file("$buildDir/distributions"))
         checksumAlgorithm.set(Checksum.Algorithm.SHA256)
         appendFileNameToChecksum.set(true)
     }
 
-    task distribution { group = 'distribution' }
+    tasks.register('distribution') { group = 'distribution' }
     artifactoryPublish.dependsOn 'distribution'
 }
 
@@ -715,6 +732,10 @@ subprojects {
 abstract class ExtractRuntime extends DefaultTask {
     @InputFile
     File inputArchive
+
+    ExtractRuntime() {
+        group = "distribution"
+    }
 
     @OutputDirectory
     def getOutputDir() {
@@ -772,6 +793,7 @@ abstract class AppImage extends DefaultTask {
     public String macPackageName = null
 
     AppImage() {
+        group = "distribution"
         imageName = project.name
         jvmArgs = []
         version = project.siriusTargetPlatform.isLinux() ? project.version : project.version.replace('-SNAPSHOT', '')
@@ -880,6 +902,10 @@ abstract class AppInstaller extends DefaultTask {
           Maintainer for .deb package*/
     public String debPackageMaintaner = null
 
+    AppInstaller() {
+        group = "distribution"
+    }
+
     @InputDirectory
     File getInputDire() {
         return distImg.getImageDir()
@@ -910,6 +936,7 @@ abstract class AppInstaller extends DefaultTask {
         String[] paras = []//distImg.createParameters()
 
         paras += [
+                '--verbose',
                 '--name', distImg.imageName,
                 '--app-image', distImg.getImageDir().absolutePath,
                 '--license-file', licenseFile.absolutePath,
@@ -921,29 +948,33 @@ abstract class AppInstaller extends DefaultTask {
 
 
         if (project.siriusTargetPlatform.isWin()) {
+            //specify temp directory inside project
+            paras += ['--temp', "\"${project.layout.getBuildDirectory().asFile.get().toPath().resolve('tmp').resolve('wix').toAbsolutePath().toString()}\"".toString()]
+            //specify resource dir to allow for installer customization.
+            paras += ['--resource-dir', "\"${project.getRootProject().rootDir.toPath().resolve('jpackage').resolve('wix-resources').toAbsolutePath().toString()}\"".toString()]
             if (winDirChooser)
                 paras += ['--win-dir-chooser'/*, winDirChooser ? '1' : '0'*/]
             if (winMenu)
                 paras += ['--win-menu'/*, winMenu ? '1' : '0'*/]
             if (winMenuGroup != null && !winMenuGroup.isBlank())
-                paras += ['--win-menu-group', "\"$winMenuGroup\""]
+                paras += ['--win-menu-group', "\"${winMenuGroup}\"".toString()]
             if (winShortcut)
                 paras += ['--win-shortcut']
             if (winPerUserInstall)
                 paras += ['--win-per-user-install']
             if (winUpdateUUID != null && !winUpdateUUID.isBlank())
-                paras += ['--win-upgrade-uuid', "$winUpdateUUID"]
+                paras += ['--win-upgrade-uuid', "${winUpdateUUID}".toString()]
         } else if (project.siriusTargetPlatform.isMac()) {
 
         } else if (project.siriusTargetPlatform.isLinux()) {
             if (linuxShortcut)
                 paras += ['--linux-shortcut']
             if (debPackageMaintaner != null && !debPackageMaintaner.isBlank())
-                paras += ['--linux-deb-maintainer', "\"$debPackageMaintaner\""]
+                paras += ['--linux-deb-maintainer', "\"${debPackageMaintaner}\"".toString()]
             if (linuxMenuGroup != null && linuxMenuGroup.length > 0)
-                paras += ['--linux-menu-group', "\"${linuxMenuGroup.join(';')}\""]
+                paras += ['--linux-menu-group', "\"${linuxMenuGroup.join(';')}\"".toString()]
             if (packageDeps != null && packageDeps.length > 0)
-                paras += ['--linux-deb-maintainer', "\"${packageDeps.join(',')}\""]
+                paras += ['--linux-deb-maintainer', "\"${packageDeps.join(',')}\"".toString()]
         } else {
             throw new IllegalArgumentException("Could not determine the OS to build on")
         }
